# decentralized_voting_system

./: .gitignore  CMakeLists.txt  README  ledger  nodes_dvsClient  nodes_dvsNode
include/: dvsClient.hpp  dvsNode.hpp  fields_alloc.hpp  merklecpp.h
keys/: private.pem
src/: dvsClient.cpp  dvsNode.cpp
